@startuml
package "AElf" {
    together {
        package AElf.Kernel.Execution{
        }

        package AElf.Kernel.Miner{
        }

        package "AElf.Kernel" {
            interface IConsensusService
            interface ISmartContractRuntime
            interface IBlockchainService
            interface ISidechainService
        }
    }

    together {
        package AElf.Runtimes.NodeJS{
            ISmartContractRuntime <|-- NodeJSSmartContractRuntime
        }
        package AElf.Runtimes.CSharp{
            ISmartContractRuntime <|-- CSharpSmartContractRuntime
        }
    }

    together {
        package AElf.OS.Database{
        }
        
        package AElf.OS.Network{
        }

        package "AElf.OS" {
        }
    }

    together {
        package "AElf.Types" {
        }
    }

    AElf.Kernel -[hidden]-> AElf.Runtimes.CSharp
    AElf.Runtimes.CSharp -[hidden]-> AElf.OS
    AElf.OS -[hidden]-> AElf.Types
}
@enduml